# src/swagger.json
@@ -317,7 +317,74 @@
           }
         }
       }
+    },
+    "/kakao_id": {
+      "post": {
+        "summary": "카카오 ID 업데이트",
+        "description": "특정 student_id를 가진 사용자의 kakao_id를 업데이트합니다.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "kakao_id": {
+                    "type": "string",
+                    "description": "새로 업데이트할 카카오 ID",
+                    "example": "kakao_12345"
+                  },
+                  "student_id": {
+                    "type": "string",
+                    "description": "업데이트할 사용자 학번",
+                    "example": "2020440102"
+                  }
+                },
+                "required": ["kakao_id", "student_id"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "카카오 ID 업데이트 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "description": "성공 메시지",
+                      "example": "kakao_id 업데이트 성공"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "해당 student_id를 가진 사용자를 찾을 수 없음",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "해당 student_id를 가진 참가자를 찾을 수 없습니다."
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 에러",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "서버 오류"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
-
